# general_camera_model

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_debug.sh  build_release.sh  clear_project.sh
apps/: CMakeLists.txt  camera_model_convert.cpp  create_camera_model.cpp  remap.cpp  scaramuzza_camera_unditort.cpp
apps/test_data/: 2penn_c1_cam0.json  cam0.txt  penn_c1_cam0.json  penn_c1_cam0.txt
cmake/: find_deps.cmake
datatset_configs/rs_tum/: cam0.json  cam0.txt  cam1.json  cam1.txt
include/general_camera_model/: cost_function.hpp  function.hpp  general_camera_model.hpp
include/general_camera_model/implementation/: cubemap_camera_model.hpp  double_sphere_camera_model.hpp  equirectangular_camera_model.hpp  extended_unified_camera_model.hpp  fov_camera_model.hpp  omni_directional_camera_model.hpp  opencv_fisheye_camera_model.hpp  opencv_pinhole_camera_model.hpp  scaramuzza_camera_model.hpp  simple_pinhole_camera_model.hpp  unified_camera_model.hpp
pybind/: CMakeLists.txt  gcm_binds.cpp  ndarray_converter.cpp  ndarray_converter.h
pybind/python_test/: mp_test.py  test.py
src/: function.cpp  general_camera_model.cpp  io_utils.h
unit_test/: CMakeLists.txt  cubemap_camera_model_test.cpp  double_sphere_camera_model_test.cpp  equirectangular_camera_model_test.cpp  extended_unified_camera_model_test.cpp  fov_camera_model_test.cpp  general_camera_model_test.cpp  opencv_fisheye_camera_model_test.cpp  opencv_pinhole_camera_model_test.cpp  scaramuzza_camera_model_test.cpp  simple_pinhole_camera_model_test.cpp  unified_camera_model_test.cpp
